2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/nfsclient/src/rpcio.c: Misc. 64bit fixes.

2010-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/include/rtems/rtems/object.h: Remove OBJECTS_ITRON_API.
	* rtems/src/rtemsobjectidapimaximum.c: Remove OBJECTS_ITRON_API.
	* score/include/rtems/score/object.h: Remove OBJECTS_ITRON_API.
	* score/include/rtems/score/thread.h: Remove ITRON.
	* score/include/rtems/score/interr.h: Remove ITRON.
	* rtems/mainpage.h: Remove comment referring to ITRON.
	* rtems/src/rtemsobjectgetapiname.c: Remove ITRON.
	* sapi/include/rtems/config.h: Remove ITRON.
	* score/src/objectapimaximumclass.c: Remove OBJECTS_ITRON_API.
	* score/include/rtems/system.h: Remove ITRON_EXTERN.
	* score/src/apiext.c: Remove comment referring to ITRON.
	* score/include/rtems/score/object.h: Remove Objects_ITRON_API.
	* rtems/src/rtemsobjectgetapiclassname.c,
	sapi/include/rtems/config.h, sapi/src/exinit.c:
	Remove RTEMS_ITRON_API conditional blocks.
	* sapi/Makefile.am: Remove src/itronapi.c.
	* sapi/src/itronapi.c: Remove.
	* score/src/threadsuspend.c, score/src/threadresume.c,
	score/src/threadreset.c, score/src/threadinitialize.c,
	score/src/apiext.c, score/include/rtems/score/thread.h,
	score/include/rtems/score/coresem.h:
	Remove RTEMS_ITRON_API conditional blocks.

2010-06-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-block.c: Clean up uint64_t maths.

2010-06-18	Chris Johns <chrisj@rtems.org>

	* libfs/src/rfs/rtems-rfs-file-system.h,
	libfs/src/rfs/rtems-rfs-file-system.c: Move questionable macros to
	C functions.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: Remove ITRON configuration parameters.

2010-06-17	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* sapi/include/confdefs.h: Remove RTEMS_COVERAGE conditionals.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/object.h,